syntax = "proto3";

option csharp_namespace = "MijnSauna.Common.Protobuf";

package greet;

service SaunaService {

	rpc GetTemperature (GetTemperatureRequest) returns (GetTemperatureResponse);

	rpc GetState (GetStateRequest) returns (GetStateResponse);

}

message GetTemperatureRequest {
}

message GetTemperatureResponse {
	int32 temperature = 1;
}

message GetStateRequest {
}

message GetStateResponse {
	bool isSaunaOn = 1;
	bool isInfraredOn = 2;
}